fix the partner image size on mobile

--- a/styles.css
+++ b/styles.css
@@ -225,6 +225,10 @@ footer {
     gap: 10px;
   }
 
+  .partners-logo li {
+    width: 30%;
+  }
+
   #mobile-links li {
     margin-left: 25px;
     list-style: none;
@@ -311,7 +315,6 @@ footer {
   }
 
   .partners-logo img {
-    height: 150px;
     width: auto;
     max-width: 100%;
     max-height: 100%;
